Fix indicators not aligned vertically due to different label fonts

--- a/src/components/Indicator.scss
+++ b/src/components/Indicator.scss
@@ -1,15 +1,24 @@
 .indicator {
     $baseWidth: 4px;
+    position: relative;
+    height: 32px;
 
     .bar {
         height: $baseWidth;
         border-radius: $baseWidth;
-        margin: 0 auto 1em;
+        margin: 0 auto;
         background-color: $box-dark-text-dimmed-color;
         transition: background-color $transition-duration;
 
         &.enabled {
             background-color: $primary-color;
         }
+    }
+
+    .content {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
